# gnotepad

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Devshell-Updated.ps1  IMPLEMENTATION_COMPLETE.md  README.md  RELIABILITY_TESTS_SUMMARY.md  TESTING.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_codeql_build_dir/: GnotePad  cmake_install.cmake  gnotepad.desktop  qrc_gnotepad.cpp
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/GnotePad_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
_codeql_build_dir/GnotePad_autogen/ISMKEKEPX5/: moc_Application.cpp  moc_Application.cpp.d
_codeql_build_dir/GnotePad_autogen/YPKJ5OE7LN/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_TextEditor.cpp  moc_TextEditor.cpp.d
_codeql_build_dir/tests/: GnotePadSmoke  cmake_install.cmake
_codeql_build_dir/tests/GnotePadSmoke_autogen/: deps  moc_predefs.h
docs/: STATIC_ANALYSIS.md
docs/themes/: COLOR_AUDIT.md
packaging/: PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.8.1.md
packaging/linux/: AppRun  app.gnotepad.GnotePad.appdata.xml.in  app.gnotepad.GnotePad.desktop.in  gnotepad.desktop.in
packaging/linux/flatpak/: app.gnotepad.GnotePad.flathub.yml  app.gnotepad.GnotePad.yml
packaging/releases/: RELEASE_NOTES_v0.8.1.md
resources/: app.manifest  gnotepad.qrc
src/: gnotepad.cpp
src/app/: Application.cpp  Application.h
src/ui/: MainWindow.FileIO.cpp  MainWindow.Search.cpp  MainWindow.Settings.cpp  MainWindow.cpp  MainWindow.h  PrintSupport.cpp  PrintSupport.h  TextEditor.cpp  TextEditor.h
tests/: CMakeLists.txt  CODE_REVIEW_CHECKLIST.md  ENHANCEMENT_SUMMARY.md  PDF_TESTING.md  QUICKSTART.md  README.md  RELIABILITY_TESTING.md  TEST_IMPROVEMENTS_SUMMARY.md  UI_TEST_ANALYSIS.md  UI_TEST_COVERAGE.md  UI_TEST_IMPLEMENTATION_SUMMARY.md  download.sh  run_smoke_gui.sh  verify_test_setup.sh
tests/cmdline/: ApplicationCmdLineTests.h  README.md  cmdline.cpp
tests/encoding/: EncodingEdgeCasesTests.h  encoding.cpp
tests/menuactions/: MenuActionsTests.h  menuactions.cpp
tests/performance/: IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING.md  PerformanceTests.h  README.md  performance.cpp
tests/reliability/: ReliabilityTests.h  reliability.cpp
tests/smoke/: MainWindowSmokeTests.h  smoke.cpp
tests/style/: StyleConfigTests.cpp  StyleConfigTests.h  style.cpp
tests/testfiles/: README.md  create_bom_files.sh  danish8.htm  download_encoding_tests.sh  findreplace.txt  neural8.htm  sample68.htm  ulysses8.htm
tests/testfiles/encoding-tests/: mixed_content.txt  utf16be_with_bom.txt  utf16le_with_bom.txt  utf8_no_bom.txt  utf8_with_bom.txt
tests/testfiles/utf8-tests/: large_multilingual.txt  line_endings_crlf.txt  line_endings_lf.txt  multilingual.txt  special_chars.txt  unicode_chars.txt
tests/tooling/: IncludeOrderTests.cpp  IncludeOrderTests.h  ToolingConfigTests.cpp  ToolingConfigTests.h  include_order.cpp  tooling.cpp
tools/: TOOLS.md  build.ps1  build.sh  check-format.ps1  check-format.sh  check-include-order.ps1  check-include-order.sh  clang-format.ps1  clang-format.sh  clang-tidy.ps1  clang-tidy.sh  configure.ps1  configure.sh  flatpak-build.sh  install-local.sh  package-appimage.sh  publish-win.ps1  run-scan-build.ps1  run-scan-build.sh
